@@ -25,11 +25,6 @@ import javafx.stage.Stage;
  *
  */
 public class OthelloApplication extends Application {
-	// REMEMBER: To run this in the lab put
-	// --module-path "/usr/share/openjfx/lib" --add-modules
-	// javafx.controls,javafx.fxml
-	// in the run configuration under VM arguments.
-	// You can import the JavaFX.prototype launch configuration and use it as well.
 
 	@Override
 	public void start(Stage stage) throws Exception {
